--- a/management/templates/registrations.html
+++ b/management/templates/registrations.html
@@ -4,44 +4,80 @@
     {% load static %}
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="{% static 'registration.css' %}">
     <script src="{% static 'jquery-3.6.4.min.js' %}"></script>
 </head>
 <body>
     <section class="registration-utmost-container-section">
+        <div class="registration-page-title-header">
+            REGISTRATION
+        </div>
         <div class="registration-form-container-div">
             {% if messages %}
+                <div class="registration-form-message-div">
                 {% for message in messages %}
                     <div>
                         {{ message }}
                     </div>
                 {% endfor %}
+                </div>
             {% endif %}
             <form method="post" enctype="multipart/form-data">
                 {% csrf_token %}
-                <div>
-                    {{ registrant_form.username }}
-                </div>
-                <div>
-                    {{ registrant_form.email }}
-                </div>
-                <div>
-                    {{ registrant_form.password1 }}
-                </div>
-                <div>
-                    {{ registrant_form.password2 }}
-                </div>
-                <div>
-                    {{ registrant_form.name }}
-                </div>
-                <div>
-                    {{ registrant_form.brgy }}
-                </div>
-                <div class="leader-profile-edit-form-field-and-label-container">
-                    <div class="leader-profile-edit-form-label-div">
-                        Sitio
+                <div class="registration-label-and-field-container">
+                    <div class="registration-form-label-div">
+                        Username:
                     </div>
-                    <div class="leader-profile-edit-field-div">
-                        <select class="edit-leader-field"
+                    <div class="registration-form-field-div">
+                        {{ registrant_form.username }}
+                    </div>
+                </div>
+                <div class="registration-label-and-field-container">
+                    <div class="registration-form-label-div">
+                        Email:
+                    </div>
+                    <div class="registration-form-field-div">
+                        {{ registrant_form.email }}
+                    </div>
+                </div>
+                <div class="registration-label-and-field-container">
+                    <div class="registration-form-label-div">
+                        Password:
+                    </div>
+                    <div class="registration-form-field-div">
+                        {{ registrant_form.password1 }}
+                    </div>
+                </div>
+                <div class="registration-label-and-field-container">
+                    <div class="registration-form-label-div">
+                        Confirm Password:
+                    </div>
+                    <div class="registration-form-field-div">
+                        {{ registrant_form.password2 }}
+                    </div>
+                </div>
+                <div class="registration-label-and-field-container">
+                    <div class="registration-form-label-div">
+                        Full Name:
+                    </div>
+                    <div class="registration-form-field-div">
+                        {{ registrant_form.name }}
+                    </div>
+                </div>
+                <div class="registration-label-and-field-container">
+                    <div class="registration-form-label-div">
+                        Barangay:
+                    </div>
+                    <div class="registration-form-label-div">
+                        {{ registrant_form.brgy }}
+                    </div>
+                </div>
+                <div class="registration-label-and-field-container">
+                    <div class="registration-form-label-div">
+                        Sitio:
+                    </div>
+                    <div class="registration-form-field-div">
+                        <select class="registration-field"
                                 name="registrant-sitio" id="registrant-sitio-dropdown">
                             {% for sitio in sitios %}
                                 <option value="{{ sitio.id }}">{{ sitio.name }}</option>
@@ -51,21 +87,35 @@
                         </select>
                     </div>
                 </div>
-                <div>
-                    {{ registrant_form.age }}
+                <div class="registration-label-and-field-container">
+                    <div class="registration-form-label-div">
+                        Age:
+                    </div>
+                    <div class="registration-form-field-div">
+                        {{ registrant_form.age }}
+                    </div>
                 </div>
-                <div>
-                    {{ registrant_form.gender }}
+                <div class="registration-label-and-field-container">
+                    <div class="registration-form-label-div">
+                        Gender:
+                    </div>
+                    <div class="registration-form-field-div">
+                        {{ registrant_form.gender }}
+                    </div>
                 </div>
-                <div>
-                    {{ registrant_form.image }}
+                <div class="registration-label-and-field-container">
+                    <div class="registration-form-label-div">
+                        Profile Image:
+                    </div>
+                    <div class="registration-form-field-div">
+                        {{ registrant_form.image }}
+                    </div>
                 </div>
-                <div>
-                    <button type="submit">Register</button>
+                <div class="registration-btn-container">
+                    <button class="registration-btn" type="submit">Register</button>
                 </div>
             </form>
         </div>
-
     </section>
 
     <script>
